--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "hr-salary-management": {
+      "i18n": {"sourceLocale":"en-US","locales": {"zh-SG":"src/locale/messages.zh.xlf"}},
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,6 +18,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "localize":["en-US"],
             "outputPath": "dist/hr-salary-management",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -27,6 +29,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
